# rustine

./: README.md
artifacts/avl-tree/analyze/: info.json
artifacts/avl-tree/avlrs/: Cargo.toml
artifacts/avl-tree/manual_translation/: Cargo.toml
artifacts/avl-tree/preprocess/: avl_bf.c  avl_bf_includes.txt  avl_data.c  avl_data_includes.txt  avl_example.c  avl_example_includes.txt  avl_test.c  avl_test_includes.txt
artifacts/avl-tree/refactor/: avl_bf.c  avl_data.c  avl_example.c  avl_test.c
artifacts/avl-tree/stat/: c2rust_clippy.txt  c2rust_code_metrics.json  c2rust_code_quality.json  c2rust_complexity_clippy.txt  c2rust_loc_files.json  c2rust_pedantic_clippy.txt  c2rust_restriction_clippy.txt  c2rust_rust_unsafe_raw_pointer.txt  c2rust_style_clippy.txt  c_fragments.json  c_loc_files.json  crown_clippy.txt  crown_code_metrics.json  crown_code_quality.json  crown_complexity_clippy.txt  crown_loc_files.json  crown_pedantic_clippy.txt  crown_restriction_clippy.txt  crown_rust_unsafe_raw_pointer.txt  crown_style_clippy.txt  laertes_clippy.txt  laertes_code_metrics.json  laertes_code_quality.json  laertes_complexity_clippy.txt  laertes_loc_files.json  laertes_nursery_clippy.txt  laertes_pedantic_clippy.txt  laertes_restriction_clippy.txt  laertes_rust_unsafe_raw_pointer.txt  laertes_style_clippy.txt  rustine_manual_translation_clippy.txt  rustine_manual_translation_code_metrics.json  rustine_manual_translation_code_quality.json  rustine_manual_translation_complexity_clippy.txt  rustine_manual_translation_correctness_clippy.txt  rustine_manual_translation_loc_files.json  rustine_manual_translation_nursery_clippy.txt  rustine_manual_translation_pedantic_clippy.txt  rustine_manual_translation_restriction_clippy.txt  rustine_manual_translation_rust_unsafe_raw_pointer.txt  (+10 more)
artifacts/binn-3.0/analyze/: info.json
artifacts/genann/genannrs/: Cargo.toml
artifacts/genann/genannrs/src/: example3.rs  example4.rs  genann.rs  genann_actfun.rs  globals.rs  lib.rs  test.rs
artifacts/genann/translate_new_ablation/: Cargo.toml  persist.txt  pointer_arith_ablation_report.json  translation.json
artifacts/genann/translate_new_ablation/src/: .genann.rs.swp  example3.rs  example4.rs  genann.rs  globals.rs  test_main.rs
artifacts/ht/htrs/: Cargo.toml
artifacts/ht/htrs/src/: bsearch.rs  demo.rs  globals.rs  ht.rs  ht_entry.rs  hti.rs  item.rs  lib.rs  perfget.rs  perflbh.rs  stats.rs
artifacts/json-c/jsonrs/: Cargo.toml
artifacts/json-c/jsonrs/src/: array_list.rs  array_list_free_fn.rs  arraylist.rs  debug.rs  globals.rs  json_c_shallow_copy_fn.rs  json_c_version.rs  json_c_visit_userfunc.rs  json_object.rs  json_object_array.rs  json_object_boolean.rs  json_object_double.rs  json_object_int.rs  json_object_int_type.rs  json_object_iter.rs  json_object_iterator.rs  json_object_object.rs  json_object_string.rs  json_parse.rs  json_patch.rs  json_patch_error.rs  json_pointer.rs  json_pointer_array_set_cb.rs  json_pointer_get_result.rs  json_tokener.rs  json_tokener_error.rs  json_tokener_state.rs  json_type.rs  json_util.rs  json_visit.rs  lh_entry.rs  lh_entry_free_fn.rs  lh_equal_fn.rs  lh_hash_fn.rs  lh_table.rs  lib.rs  linkhash.rs  myinfo.rs  parse_flags.rs  printbuf.rs  (+25 more)
artifacts/tulipindicators/translate/: Cargo.toml
artifacts/tulipindicators/translate/src/: abs.rs  acos.rs  ad.rs  add.rs  adosc.rs  adx.rs  adxr.rs  ao.rs  apo.rs  aroon.rs  aroonosc.rs  asin.rs  atan.rs  atr.rs  avgprice.rs  bbands.rs  benchmark.rs  benchmark_main.rs  bop.rs  buffer.rs  candles.rs  cci.rs  ceil.rs  cli.rs  cli_main.rs  cmo.rs  cos.rs  cosh.rs  crossany.rs  crossover.rs  cvi.rs  decay.rs  dema.rs  di.rs  div.rs  dm.rs  dpo.rs  dx.rs  edecay.rs  ema.rs  (+84 more)
artifacts/tulipindicators/translate_new_ablation/: Cargo.toml
artifacts/tulipindicators/translate_new_ablation/src/: ad.rs  adosc.rs  adx.rs  adxr.rs  ao.rs  apo.rs  aroon.rs  aroonosc.rs  asin.rs  atan.rs  atr.rs  bbands.rs  benchmark.rs  benchmark_main.rs  candles.rs  cci.rs  ceil.rs  cli.rs  cli_main.rs  cmo.rs  cosh.rs  crossany.rs  crossover.rs  cvi.rs  decay.rs  dema.rs  di.rs  div.rs  dm.rs  dpo.rs  dx.rs  edecay.rs  ema.rs  emv.rs  example1_main.rs  example2.rs  exp.rs  fisher.rs  fosc.rs  fuzzer.rs  (+68 more)
artifacts/tulipindicators/tulipindicatorsrs/: Cargo.toml
artifacts/tulipindicators/tulipindicatorsrs/src/: abs.rs  acos.rs  ad.rs  add.rs  adosc.rs  adx.rs  adxr.rs  ao.rs  apo.rs  aroon.rs  aroonosc.rs  asin.rs  atan.rs  atr.rs  avgprice.rs  bbands.rs  benchmark.rs  bop.rs  buffer.rs  candles.rs  cci.rs  ceil.rs  cli.rs  cmo.rs  cos.rs  cosh.rs  crossany.rs  crossover.rs  cvi.rs  decay.rs  dema.rs  di.rs  div.rs  dm.rs  dpo.rs  dx.rs  edecay.rs  ema.rs  emv.rs  example1.rs  (+95 more)
(+7238 files in other folders)
