[package]
name = "genannrs"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name="example1"
path="src/example1.rs"

[[bin]]
name="example3"
path="src/example3.rs"

[[bin]]
name="example2"
path="src/example2.rs"

[[bin]]
name="example4"
path="src/example4_main.rs"

[[bin]]
name="test"
path="src/test_main.rs"
