[package]
name = "jsonrs"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name="test_strerror"
path="src/test_strerror.rs"

[[bin]]
name="test_charcase"
path="src/test_charcase_main.rs"

[[bin]]
name="test_parse_int64"
path="src/test_parse_int64_main.rs"

[[bin]]
name="test_json_patch"
path="src/test_json_patch_main.rs"

[[bin]]
name="test_float"
path="src/test_float.rs"

[[bin]]
name="test2"
path="src/test2.rs"

[[bin]]
name="test_parse"
path="src/test_parse_main.rs"

[[bin]]
name="test_printbuf"
path="src/test_printbuf_main.rs"

[[bin]]
name="test_json_pointer"
path="src/test_json_pointer_main.rs"

[[bin]]
name="test4"
path="src/test4_main.rs"

[[bin]]
name="test_cast"
path="src/test_cast_main.rs"

[[bin]]
name="test_null"
path="src/test_null.rs"

[[bin]]
name="test_locale"
path="src/test_locale.rs"

[[bin]]
name="test_util_file"
path="src/test_util_file_main.rs"

[[bin]]
name="test_double_serializer"
path="src/test_double_serializer.rs"

[[bin]]
name="test_int_add"
path="src/test_int_add.rs"

[[bin]]
name="json_parse"
path="src/json_parse_main.rs"

[[bin]]
name="test_int_get"
path="src/test_int_get.rs"

[[bin]]
name="test_compare"
path="src/test_compare.rs"

[[bin]]
name="testReplaceExisting"
path="src/test_replace_existing.rs"

[[bin]]
name="test_visit"
path="src/test_visit_main.rs"

[[bin]]
name="test_object_iterator"
path="src/test_object_iterator.rs"

[[bin]]
name="test_set_serializer"
path="src/test_set_serializer_main.rs"

[[bin]]
name="test_deep_copy"
path="src/test_deep_copy_main.rs"

[[bin]]
name="test_set_value"
path="src/test_set_value.rs"

[[bin]]
name="test1"
path="src/test1_main.rs"
